# crm-ssn

./: .env  .gitignore  BASE DATOS PAS DESDE MAT 77713 al 88367.xlsm  DEFINITIVO INFORME ORGANIZACION 2025.xlsx  Dockerfile  Esquema_Seguridad_Backup_Correo.docx  Guia_Dueño_Acceso_Correo.docx  KatrixBroker.spec  MODELO PROYECCION COMISIONES Y CRECIMIENTO ORGANIZACION CORONEL MOYA.xlsx  PLANILLA SEGUIMIENTO REUNION Y LLAMADOS.xlsx  PROCESOS PARA AUTOMATIZAR.pptx  Propuesta_Migracion_Sistema_Productores.docx  Propuesta_SSN_JavierCoronel.docx  README.md  Transformacion_Digital_PAS (1).pptx  Transformacion_Digital_PAS .pptx  Transformacion_Digital_PAS.pptx  api.py  api_client.py  api_guide.md  api_models.py  config_api.json  data_manager.py  debug_resultado.html  documento.xml  generate_icon.py  importar_excel.py  katrix-biometrics.js  main.py  manifest.json  mercantil_andina.py  notificaciones.py  panel.html  productores-asesores-sociedades.csv  productores-asesores.csv  requirements.txt  run_api_tests.sh  run_cli.py  run_init_db.py  ssn_test.py  (+31 more)
.github/workflows/: build.yml
data/: licencia_config.json
desktop-tauri/src/: app.js  index.html  style.css
desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop-tauri/src-tauri/icons/: icon.icns
desktop-tauri/src-tauri/src/: main.rs
