[package]
name = "katrix-desktop"
version = "1.0.0"
description = "Katrix ERP/CRM Desktop App"
authors = ["Katrix"]
license = "Proprietary"
repository = ""
default-run = "katrix-desktop"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29"


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
